--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>	
 	<script>
 		function secondHighest(arr) {
+			if(arr.length <= 1) return -Infinity;
 		    // set default values for largest and secondLargest
 		    let largest = -Infinity;
 		    let secondLargest = null;
@@ -40,6 +41,7 @@
 		}
 		Main();
 
+		
 	</script>
 
     <script type="text/javascript" src="./script.js">
